Updated journal form text field. Corrected journal form spacing.

--- a/styles/main.css
+++ b/styles/main.css
@@ -61,6 +61,10 @@ button .btn,.btn-outline-dark {
     min-width: 15rem;
 }
 
+#journalEntry {
+    height: 5rem;
+}
+
 /* Journal Form Moods */
 
 .mood-dropdown--list {
